solved white space on the right of the page because of image backgroudn height , solved with  overflow-x: hidden on the body tag

--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Mono:wght@300;400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&family=Roboto+Mono:wght@300;400;500;700&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'lato', sans-serif;
-
+    font-family: 'Lato', sans-serif;
+}
+body {
+    overflow-x: hidden;
 }
 
 header {
-    height: 80vh;
     width: 100%;
+    height: 75vh;
     background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(./img/desktop-source-code-and-wallpaper-by-coding-and-programming-free-photo.jpg);
     background-size: cover;
     background-position: center;
-    margin: 0 auto;
+    margin: 0;
+    margin-bottom: 40px;
 }
 
 .primary-nav{
@@ -78,7 +81,7 @@ button:hover{
     text-align: center;
     top: 40%;
     transform: translateY(-50%);
-    width: 100vw
+    width: 100vw;
 }
 
 .hero-title h1 {
@@ -102,6 +105,58 @@ button:hover{
     color: #ea1538;
 }
 
+.section {
+    padding-bottom: 1em;
+    padding-top: 1em;
+}
+
+.about-text {
+    padding-bottom: 1em;
+    text-align: center;
+}
+
+h2 {
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.about-text hr {
+    border: none;
+    border-bottom: 1px solid #e63550;
+    margin: 1rem auto;
+    position: relative;
+    width: 80px;
+}
+.about-text p {
+    font-family: 'Roboto';
+    font-weight: bold;
+    margin-top: 40px;
+}
+
+.projects-header {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 60px;
+}
+
+.projects-header hr {
+    border: none;
+    border-bottom: 1px solid #e63550;
+    margin: 1rem auto;
+    position: relative;
+    width: 80px;
+}
+
+.project-container {
+    display: inline-flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.project-container img{
+   width: 90%;
+}
 
 
 
@@ -110,6 +165,7 @@ button:hover{
         font-size: 2.2rem;
         padding: 0 22px
     }
+}
 
     .hero-title h1:before {
         bottom: 5px;
@@ -142,3 +198,4 @@ button:hover{
         margin-top: 10px;
         text-align: right;
     }
+
